--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
         "start": "bun src/main.ts"
     },
     "devDependencies": {
-        "@types/bun": "latest"
+        "@types/bun": "1.3.0",
+        "prettier": "^3.6.2"
     },
     "peerDependencies": {
         "typescript": "^5"
     },
     "dependencies": {
         "@std/text": "npm:@jsr/std__text",
-        "fast-xml-parser": "^5.0.9"
+        "fast-xml-parser": "^5.3.0"
     }
 }
