--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-  "semi": false,
-  "singleQuote": false,
-  "trailingComma": "all",
+    "semi": false,
+    "singleQuote": false,
+    "trailingComma": "all",
+    "experimentalOperatorPosition": "start"
 }
